[package]
name = "flowq-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core business logic for FlowQ message broker"

[dependencies]
flowq-types.workspace = true
flowq-storage.workspace = true

tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
