[package]
name = "flowq-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for FlowQ message broker"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
bytes.workspace = true
base64 = "0.22"
utoipa.workspace = true
